# NetWorkPacketDatagramCompiler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PlayerD.cpp  PlayerD.hpp  Sources.cmake  Test.xml  result.cpp
include/: pugiconfig.hpp  pugixml.hpp
include/CppNode/: CLASS.h  INode.h  NodeBase.h  NodeFactory.h  PrimitiveNode.h
include/utils/: EnumArray.h  EnumUtils.h  result.h
src/: main.cpp
src/CppNode/: CLASS.cpp  NodeBase.cpp  NodeFactory.cpp  PrimitiveNode.cpp
